--- a/Portfolio.html
+++ b/Portfolio.html
@@ -11,7 +11,7 @@
     <body>
         <!--HeaderSection-->
         <div class="header--border"> <!-- class="header-border" -->
-            <section class="section">
+            <section class="section section--header">
                 <div class="container">
                     <header class="section__page--header"> <!-- class="page-header container-for-dimensions" -->
                         <a class="section__header--logo" href="index.html"> <!-- class="link header-logo" -->
@@ -193,57 +193,63 @@
             </section>
         </main>
         <!--PageFooter-->
-        <footer class="page-footer">
-            <div class="footer-style container-for-dimensions">
-                <div class="footer-logo-container">
-                <section class="footer-section">
-                    <a class="footer-logo link" href="index.html"><span class="span-for-logo">Web</span>Studio</a>
-                    <address>
-                        <ul class="informations-of-contact unstyled-list">
-                            <li><a class="link location" href="">695 Park Ave, NY 10065, USA</a></li>
-                            <li><a class="link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                            <li><a class="link contacts mail" href="tel:+12127724150">+1 212-772-4150</a></li>
-                        </ul>
-                    </address>
-                </section>
-                </div>
-                <section class="find-us-section">
-                    <p class="find-us-text">Find us on:</p>
-                    <div class="social-icons">
-                        <div class="social-media-icons">
-                            <ul class="unstyled-list">
-                                <li class="icon-list-item-footer"> <a href="#">
-                                        <svg width="20px" height="20px">
-                                            <use href="images/icons-svg.svg#icon-instagram-2-2"></use>
-                                        </svg></a></li>
-                                <li class="icon-list-item-footer"> <a href="#">
-                                        <svg width="20px" height="20px">
-                                            <use href="images/icons-svg.svg#icon-twitter-1-2"></use>
-                                        </svg></a></li>
-                                <li class="icon-list-item-footer"> <a href="#">
-                                        <svg width="20px" height="20px">
-                                            <use href="images/icons-svg.svg#icon-facebook-1-2"></use>
-                                        </svg></a></li>
-                                <li class="icon-list-item-footer"> <a href="#">
-                                        <svg width="20px" height="20px">
-                                            <use href="images/icons-svg.svg#icon-linkedin-1-2"></use>
-                                        </svg></a></li>
-                            </ul>
+        <footer class="page-footer"> <!--class="page-footer"-->
+            <section class="section section--footer">
+                <div class="container">
+                    <div class="section__footer-style"> <!--class="footer-style container-for-dimensions"-->
+                        <div class="section__footer-logo-container"> <!--class="footer-logo-container"-->
+                            <section class=""> <!--class="footer-section"-->
+                                <a class="section__footer-logo link" href="index.html"> <!--class="footer-logo link"-->
+                                    <span class="section__span-logo">Web</span>Studio</a> <!--class="span-for-logo"-->
+                                <address>
+                                    <ul class="section__informations-of-contact unstyled-list"> <!--class="informations-of-contact unstyled-list"-->
+                                        <li><a class="section__location link " href="">695 Park Ave, NY 10065, USA</a></li> <!--class="link location"-->
+                                        <li><a class="section__contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li> <!--class="link contacts"-->
+                                        <li><a class="section__contacts mail link" href="tel:+12127724150">+1 212-772-4150</a></li> <!--class="link contacts mail"-->
+                                        
+                                    </ul>
+                                </address>
+                            </section>
                         </div>
+                        <section class="section__find-us-section"> <!--class="find-us-section"-->
+                            <p class="section__find-us-text">Find us on:</p> <!--class="find-us-text"-->
+                            <div class="section__social-icons"> <!--class="social-icons"-->
+                                <div class="section__social-media-icons"> <!--class="social-media-icons"-->
+                                    <ul class="section__icon-list-footer unstyled-list"> <!--class="icon-list-footer"-->
+                                        <li class="section__icon-list-item-footer"> <a href="#"> <!--class="icon-list-item-footer"-->
+                                                <svg width="20px" height="20px">
+                                                    <use href="images/icons-svg.svg#icon-instagram-2-2"></use>
+                                                </svg></a></li>
+                                        <li class="section__icon-list-item-footer"> <a href="#">
+                                                <svg width="20px" height="20px">
+                                                    <use href="images/icons-svg.svg#icon-twitter-1-2"></use>
+                                                </svg></a></li>
+                                        <li class="section__icon-list-item-footer"> <a href="#">
+                                                <svg width="20px" height="20px">
+                                                    <use href="images/icons-svg.svg#icon-facebook-1-2"></use>
+                                                </svg></a></li>
+                                        <li class="section__icon-list-item-footer"> <a href="#">
+                                                <svg width="20px" height="20px">
+                                                    <use href="images/icons-svg.svg#icon-linkedin-1-2"></use>
+                                                </svg></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </section>
+                        <section class="section__newsletter"> <!--class="newsletter"-->
+                            <h2 class="section__subscribe-footer">Subscribe to the newsletter</h2> <!--class="subscribe-footer"-->
+                            <form name="email" class="email-footer"> 
+                                <input type="email" placeholder="Email" name="Email" required>
+                                <button class="section__footer-subscribe-button" type="submit">Subscribe <!--class="footer-subscribe-button"-->
+                                    <svg class="section__subscribe-svg"> <!--class="subscribe-svg"-->
+                                        <use href="images/icons-svg.svg#icon-send"></use>
+                                    </svg></a></li>
+                                </button>
+                            </form>
+                        </section>
                     </div>
-                </section>
-                <section class="newsletter">
-                    <h2 class="subscribe-footer">Subscribe to the newsletter</h2>
-                    <form name="email" class="email-footer">
-                        <input type="email" placeholder="Email" name="Email" required>
-                        <button class="footer-subscribe-button" type="submit">Subscribe
-                            <svg class="subscribe-svg">
-                                <use href="images/icons-svg.svg#icon-send"></use>
-                            </svg></a></li> 
-                        </button>
-                    </form>
-                </section>
-            </div>
+                </div>
+            </section>
         </footer>
     </body>
 </html>
