--- a/index.html
+++ b/index.html
@@ -242,21 +242,21 @@
                                     </li>
                                     <li class="social-media-grid__item">
                                         <a class="" href="#">
-                                            <svg class="social-media-icons-svg">
+                                            <svg class="social-media-grid__icons-svg">
                                                 <use href="images/icons-svg.svg#icon-twitter-1-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-media-grid__item">
                                         <a class="" href="#">
-                                            <svg class="social-media-icons-svg">
+                                            <svg class="social-media-grid__icons-svg">
                                                 <use href="images/icons-svg.svg#icon-facebook-1-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-media-grid__item">
                                         <a class="" href="#">
-                                            <svg class="social-media-icons-svg">
+                                            <svg class="social-media-grid__icons-svg">
                                                 <use href="images/icons-svg.svg#icon-linkedin-1-1"></use>
                                             </svg>
                                         </a>
@@ -283,21 +283,21 @@
                                     </li>
                                     <li class="social-media-grid__item">
                                         <a class="" href="#">
-                                            <svg class="social-media-icons-svg">
+                                            <svg class="social-media-grid__icons-svg">
                                                 <use href="images/icons-svg.svg#icon-twitter-1-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-media-grid__item">
                                         <a class="" href="#">
-                                            <svg class="social-media-icons-svg">
+                                            <svg class="social-media-grid__icons-svg">
                                                 <use href="images/icons-svg.svg#icon-facebook-1-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-media-grid__item">
                                         <a class="" href="#">
-                                            <svg class="social-media-icons-svg">
+                                            <svg class="social-media-grid__icons-svg">
                                                 <use href="images/icons-svg.svg#icon-linkedin-1-1"></use>
                                             </svg>
                                         </a>
@@ -324,21 +324,21 @@
                                     </li>
                                     <li class="social-media-grid__item">
                                         <a class="" href="#">
-                                            <svg class="social-media-icons-svg">
+                                            <svg class="social-media-grid__icons-svg">
                                                 <use href="images/icons-svg.svg#icon-twitter-1-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-media-grid__item">
                                         <a class="" href="#">
-                                            <svg class="social-media-icons-svg">
+                                            <svg class="social-media-grid__icons-svg">
                                                 <use href="images/icons-svg.svg#icon-facebook-1-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-media-grid__item">
                                         <a class="" href="#">
-                                            <svg class="social-media-icons-svg">
+                                            <svg class="social-media-grid__icons-svg">
                                                 <use href="images/icons-svg.svg#icon-linkedin-1-1"></use>
                                             </svg>
                                         </a>
@@ -365,21 +365,21 @@
                                     </li>
                                     <li class="social-media-grid__item">
                                         <a class="" href="#">
-                                            <svg class="social-media-icons-svg">
+                                            <svg class="social-media-grid__icons-svg">
                                                 <use href="images/icons-svg.svg#icon-twitter-1-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-media-grid__item">
                                         <a class="" href="#">
-                                            <svg class="social-media-icons-svg">
+                                            <svg class="social-media-grid__icons-svg">
                                                 <use href="images/icons-svg.svg#icon-facebook-1-1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-media-grid__item">
                                         <a class="" href="#">
-                                            <svg class="social-media-icons-svg">
+                                            <svg class="social-media-grid__icons-svg">
                                                 <use href="images/icons-svg.svg#icon-linkedin-1-1"></use>
                                             </svg>
                                         </a>
