--- a/index.html
+++ b/index.html
@@ -72,37 +72,37 @@
     <div class="header--border"> <!-- class="header-border" -->
         <section class="section section--header">
             <div class="container">
-                <header class="section__page--header"> <!-- class="page-header container-for-dimensions" -->
-                    <a class="section__header--logo" href="index.html"> <!-- class="link header-logo" -->
-                        <span class="section__span--logo">Web</span>Studio</a> <!-- class="span-for-logo" -->
-                    <nav class="section__header--navigation"> <!-- class="header-navigation" -->
-                        <ul class="section__navigation--list unstyled-list"> <!-- class="navigation-list unstyled-list" -->
-                            <li class="section__navigation--list--item"> <!-- class="nav-list-item" -->
-                                <a class="section__navigation--link link active-link" href="index.html">Studio</a> <!-- class="link navigation-link active-link" -->
+                <header class="header__main"> <!-- class="page-header container-for-dimensions" -->
+                    <a class="logo logo--headersection" href="index.html"> <!-- class="link header-logo" -->
+                        <span class="logo__headertext">Web</span>Studio</a> <!-- class="span-for-logo" -->
+                    <nav class="header__navigation"> <!-- class="header-navigation" -->
+                        <ul class="header__navlist unstyled-list"> <!-- class="navigation-list unstyled-list" -->
+                            <li class="header header__navlist--item"> <!-- class="nav-list-item" -->
+                                <a class="header__navigation--link link active-link" href="index.html">Studio</a> <!-- class="link navigation-link active-link" -->
                             </li> 
-                            <li class="section__navigation--list--item"> 
-                                <a class="section__navigation--link link" href="Portfolio.html">Portfolio</a> 
+                            <li class="header header__navlist--item"> 
+                                <a class="header__navigation--link link" href="Portfolio.html">Portfolio</a> 
                             </li> 
-                            <li class="section__navigation--list--item"> 
-                                <a class="section__navigation--link link" href="Contacts.html">Contacts</a>
+                            <li class="header header__navlist--item"> 
+                                <a class="header header__navigation--link link" href="Contacts.html">Contacts</a>
                             </li> 
                         </ul>
                     </nav>
             
                     <!--RightNavigationSection-->
             
-                    <ul class="section__right-navigation-list unstyled-list"> <!-- class="right-navigation-list unstyled-list" -->
-                        <li class="section__contact-list-item"> <!-- class="contact-list-item" -->
-                            <a class="section__right-navigation-contact link" href="mailto:info@devstudio.com"> <!-- class="link right-navigation-contact" -->
-                                <svg class="section__right-navigation-icon-1" width="16px" height="12px"> <!-- class="right-navigation-icon-1" -->
+                    <ul class="header__right-navigation-list unstyled-list"> <!-- class="right-navigation-list unstyled-list" -->
+                        <li class="header__contact-list-item"> <!-- class="contact-list-item" -->
+                            <a class="header__right-navigation-contact link" href="mailto:info@devstudio.com"> <!-- class="link right-navigation-contact" -->
+                                <svg class="header__right-navigation-icon-1" width="16px" height="12px"> <!-- class="right-navigation-icon-1" -->
                                     <use href="images/icons-svg.svg#icon-envelope"></use>
                                 </svg>
                                 info@devstudio.com
                             </a>
                         </li>
-                        <li class="section__contact-list-item">
-                            <a class="section__right-navigation-contact link" href="tel:+12127724150">
-                                <svg class="section__right-navigation-icon-2" width="10px" height="16px"> <!-- class="right-navigation-icon-2" -->
+                        <li class="header__contact-list-item">
+                            <a class="header__right-navigation-contact link" href="tel:+12127724150">
+                                <svg class="header__right-navigation-icon-2" width="10px" height="16px"> <!-- class="right-navigation-icon-2" -->
                                     <use href="images/icons-svg.svg#icon-smartphone"></use>
                                 </svg>
                                 +1 212-772-4150</a>
@@ -123,17 +123,17 @@
         <!--Features-Section-->
         <section class="section"> <!-- class="container-for-dimensions" -->
             <div class="container">
-                <ul class="grid grid--feature-studio"> <!--class="container-feature-studio unstyled-list" -->
-                    <li class="grid__feature-studio">  <!--class="feature-studio-list unstyled-list" -->
-                        <div class="feature-studio-svg-container"> <!--class="svg-container-features" -->
-                            <div class="feature-studio-svg-container__item"> <!--class="center-svg" -->
+                <ul class="grid grid--feature"> <!--class="container-feature-studio unstyled-list" -->
+                    <li class="grid__feature">  <!--class="feature-studio-list unstyled-list" -->
+                        <div class="feature-svgcontainer"> <!--class="svg-container-features" -->
+                            <div class="feature-svgcontainer__item"> <!--class="center-svg" -->
                                 <svg class=""> <!--class="svg-dimensions-features" -->
                                     <use href="images/icons-svg.svg#icon-antenna-1-1"></use>
                                 </svg>
                             </div>
-                            <div class="feature-studio-content"> <!--class="feature-text" -->
-                                <h3 class="feature-studio__title">ATTENTION TO DETAILS</h3> <!--class="strenghts-title" -->
-                                <p class="feature-studio__description">We go into all the details and processes<br> <!--class="strenghts-description" -->
+                            <div class="feature-content"> <!--class="feature-text" -->
+                                <h3 class="feature-content__title">ATTENTION TO DETAILS</h3> <!--class="strenghts-title" -->
+                                <p class="feature-content__description">We go into all the details and processes<br> <!--class="strenghts-description" -->
                                     of your business to develop a
                                     <br> customized solution.
                                 </p> 
@@ -141,15 +141,15 @@
                         </div>
                     </li>
                     <li class="grid__feature-studio">  
-                        <div class="feature-studio-svg-container"> 
-                            <div class="feature-studio-svg-container__item"> 
+                        <div class="feature-svgcontainer"> 
+                            <div class="feature-svgcontainer__item"> 
                                 <svg class=""> 
                                     <use href="images/icons-svg.svg#icon-clock-1-1"></use>
                                 </svg>
                             </div>
-                            <div class="feature-studio-content"> 
-                                <h3 class="feature-studio__title">PUNCTUALITY</h3> 
-                                <p class="feature-studio__description">With us, you can feel safe and secure. <br>
+                            <div class="feature-content"> 
+                                <h3 class="feature-content__title">PUNCTUALITY</h3> 
+                                <p class="feature-content__description">With us, you can feel safe and secure. <br>
                                     An important principle of the company:
                                     <br>respect your time and deadlines.
                                 </p> 
@@ -157,15 +157,15 @@
                         </div>
                     </li>
                     <li class="grid__feature-studio">  
-                        <div class="feature-studio-svg-container"> 
-                            <div class="feature-studio-svg-container__item"> 
+                        <div class="feature-svgcontainer"> 
+                            <div class="feature-svgcontainer__item"> 
                                 <svg class=""> 
                                     <use href="images/icons-svg.svg#icon-diagram-1-1"></use>
                                 </svg>
                             </div>
-                            <div class="feature-studio-content"> 
-                                <h3 class="feature-studio__title">PLANNING</h3> 
-                                <p class="feature-studio__description">You will be able to observe and<br>
+                            <div class="feature-content"> 
+                                <h3 class="feature-content__title">PLANNING</h3> 
+                                <p class="feature-content__description">You will be able to observe and<br>
                                     participate in every phase of solution<br>
                                     development and implementation.</p> 
                                 </p> 
@@ -173,15 +173,15 @@
                         </div>
                     </li>
                     <li class="grid__feature-studio">  
-                        <div class="feature-studio-svg-container"> 
-                            <div class="feature-studio-svg-container__item"> 
+                        <div class="feature-svgcontainer"> 
+                            <div class="feature-svgcontainer__item"> 
                                 <svg class=""> 
                                     <use href="images/icons-svg.svg#icon-astronaut-1-1"></use>
                                 </svg>
                             </div>
-                            <div class="feature-studio-content"> 
-                                <h3 class="feature-studio__title">MODERN TECHNOLOGIES</h3> 
-                                <p class="feature-studio__description">We use innovative tools to solve<br>
+                            <div class="feature-content"> 
+                                <h3 class="feature-content__title">MODERN TECHNOLOGIES</h3> 
+                                <p class="feature-content__description">We use innovative tools to solve<br>
                                     assigned tasks. It's time to simplify work<br>
                                     processes.</p> 
                                 </p> 
@@ -395,9 +395,9 @@
         <section class="section"> <!--class="container-for-dimensions"-->
             <div class="container">
                 <h2 class="section__title">Regular Customers</h2> <!--class="center-text-1"-->
-                <ul class="grid grid--feature-studio-1">  <!--class="container-feature-studio-1 unstyled-list"-->
-                    <div class="regular-customers-svg-container">  <!--class="svg-container-regular-customers"-->
-                        <li class="regular-customers-svg-container__list"> <!--class="svg-container"-->
+                <ul class="grid grid--feature-1">  <!--class="container-feature-studio-1 unstyled-list"-->
+                    <div class="customers-container">  <!--class="svg-container-regular-customers"-->
+                        <li class=""> <!--class="svg-container"-->
                             <div class="svg-container-customers"> <!--svg-container-regular-customers-svg"-->
                                 <svg class="svg-container-customers__svg"> <!--class="svg-dimensions-regular-customers"-->
                                     <use href="images/icons-svg.svg#icon-Logo"></use>
@@ -406,8 +406,8 @@
                         </li>
                     </div>
 
-                    <div class="regular-customers-svg-container">  
-                        <li class="regular-customers-svg-container__list"> 
+                    <div class="customers-container">  
+                        <li class=""> 
                             <div class="svg-container-customers"> 
                                 <svg class="svg-container-customers__svg"> 
                                     <use href="images/icons-svg.svg#icon-Logo-1"></use>
@@ -416,8 +416,8 @@
                         </li>
                     </div>
 
-                    <div class="regular-customers-svg-container">  
-                        <li class="regular-customers-svg-container__list"> 
+                    <div class="customers-container">  
+                        <li class=""> 
                             <div class="svg-container-customers"> 
                                 <svg class="svg-container-customers__svg"> 
                                     <use href="images/icons-svg.svg#icon-Logo-2"></use>
@@ -426,8 +426,8 @@
                         </li>
                     </div>
 
-                    <div class="regular-customers-svg-container">  
-                        <li class="regular-customers-svg-container__list"> 
+                    <div class="customers-container">  
+                        <li class=""> 
                             <div class="svg-container-customers"> 
                                 <svg class="svg-container-customers__svg"> 
                                     <use href="images/icons-svg.svg#icon-Logo-3"></use>
@@ -436,8 +436,8 @@
                         </li>
                     </div>
 
-                    <div class="regular-customers-svg-container">  
-                        <li class="regular-customers-svg-container__list"> 
+                    <div class="customers-container">  
+                        <li class=""> 
                             <div class="svg-container-customers"> 
                                 <svg class="svg-container-customers__svg"> 
                                     <use href="images/icons-svg.svg#icon-Logo-4"></use>
@@ -446,8 +446,8 @@
                         </li>
                     </div>
 
-                    <div class="regular-customers-svg-container">  
-                        <li class="regular-customers-svg-container__list"> 
+                    <div class="customers-container">  
+                        <li class=""> 
                             <div class="svg-container-customers"> 
                                 <svg class="svg-container-customers__svg"> 
                                     <use href="images/icons-svg.svg#icon-Logo-5"></use>
